tests/snapshots/integration__duplicate_enum_symbol_rejected.snap
---
source: tests/integration.rs
expression: err
---
Error {
    msg: "parse IDL source",
    source: Error {
        msg: "parse `<input>`",
        source: ParseDiagnostic {
            src: NamedSource {
                name: "<input>",
                source: "<redacted>",
                language: None,
            ,
            span: SourceSpan {
                offset: SourceOffset(
                    92,
                ),
                length: 3,
            },
            message: "duplicate enum symbol: RED",
            label: None,
        },
    },
}
