tests/snapshots/integration__duplicate_field_name_rejected.snap
---
source: tests/integration.rs
expression: err
---
Error {
    msg: "parse IDL source",
    source: Error {
        msg: "parse `<input>`",
        source: ParseDiagnostic {
            src: NamedSource {
                name: "<input>",
                source: "<redacted>",
                language: None,
            ,
            span: SourceSpan {
                offset: SourceOffset(
                    121,
                ),
                length: 4,
            },
            message: "duplicate field 'name' in record 'R'",
            label: None,
        },
    },
}
