tests/snapshots/integration__idl2schemata_unresolved_type_detected.snap
---
source: tests/integration.rs
expression: render_diagnostic(&err)
---
  x Undefined name: test.MissingType
   ,-[<input>:5:17]
 4 |             record R {
 5 |                 MissingType field;
   :                 ^^^^^|^^^^^
   :                      `-- Undefined name: test.MissingType
 6 |             }
   `----
