tests/snapshots/integration__nested_union_rejected.snap
---
source: tests/integration.rs
expression: render_diagnostic(&err)
---
  x parse IDL source
  |-> parse `<input>`
  `-> Unions may not immediately contain other unions (per the Avro specification, §schemas). Note: Java avro-tools incorrectly accepts this syntax, producing an empty union.
   ,-[<input>:5:31]
 4 |             record Bad {
 5 |                 union { null, union { string, int } } nested;
   :                               ^^^^^^^^^^|^^^^^^^^^^
   :                                         `-- Unions may not immediately contain other unions (per the Avro specification, §schemas). Note: Java avro-tools incorrectly accepts this syntax, producing an empty union.
 6 |             }
   `----
