tests/snapshots/integration__reserved_type_name_rejected.snap
---
source: tests/integration.rs
expression: err
---
Error {
    msg: "parse IDL source",
    source: Error {
        msg: "parse `<input>`",
        source: ParseDiagnostic {
            src: NamedSource {
                name: "<input>",
                source: "<redacted>",
                language: None,
            ,
            span: SourceSpan {
                offset: SourceOffset(
                    7,
                ),
                length: 5,
            },
            message: "Illegal name: int",
        },
    },
}
